2014-11-09 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc2.cc:
	  Fix a long long register allcoation issue.
	* support/regression/tests/gcc-torture-execute-950511-1.c:
	  Disable test that fails on 32-bit hosts.

2014-11-08 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/tests/longlong.c,
	  support/regression/tests/gcc-torture-execute-950512-1.c:
	  Disabled test, since it fails on 32-bit hosts.

2014-11-07 Philipp Klaus Krause  <pkk AT spth.de>

	* device/lib/_modslonglong.c,
	  device/lib/_modulonglong.c,
	  device/lib/Makefile.in,
	  device/lib/*/Makefile.in,
	  doc/sdccman.lyx:
	  Implement % for long long and unsigned long long.
	* doc/Makefile.in:
	  More sensible error behaviour when building documentation.
	* src/SDCCval.c,
	  src/SDCCerr.c:
	  Only warn about long long constants for large values.
	* device/lib/_mullonglong.c:
	  Fix long long multiplication.
	* support/regression/tests/*.c:
	  Enable some long long regression test that pass now.

2014-11-06 Philipp Klaus Krause  <pkk AT spth.de>

	* src/z80/gen.c:
	  More efficient assignment of literals to 16-bit globals and statics.

2014-11-06 Philipp Klaus Krause  <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2306.c:
	  Fixed bug #2306.

2014-11-06 Philipp Klaus Krause  <pkk AT spth.de>

	* src/z80/gen.c,
	  support/regression/tests/bug-2304.c:
	  Fixed bug #2304.
	* src/z80/ralloc.c,
	  support/regression/tests/bug-2305.c:
	  Fixed bug #2305.

2014-10-29 Philipp Klaus Krause  <pkk AT spth.de>

	* support/regression/tests/bug-2254.c:
	  Regression test for bug #2254.

2014-10-22 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  Spelling fix inspired by Debian patch 02_fix_spelling.

2014-10-22 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/Makefile.in:
	* device/stm8/_modslong.s:
	* device/stm8/_divslong.s:
	  Optimized mod & div of signed long.

2014-10-17 Ben Shi <powerstudio1st AT 163.com>
	* device/lib/stm8/Makefile.in: