@@ -395,7 +395,8 @@ typedef struct
   int reset_labelKey;           /* reset Label no 1 at the start of a function */
   int globals_allowed;          /* global & static locals not allowed ?  0 ONLY TININative */
 
-  int num_regs;                /* Number of registers handled in the tree-decomposition-based register allocator in SDCCralloc.hpp */
+  int num_regs;                 /* Number of registers handled in the tree-decomposition-based register allocator in SDCCralloc.hpp */
+
 #define PORT_MAGIC 0xAC32
   /** Used at runtime to detect if this structure has been completly filled in. */
   int magic;
